--- a/home.html
+++ b/home.html
@@ -75,9 +75,8 @@
             <!-- 1 - Features -->
             <li class="nav-item dropdown">
               <!-- nav-link -->
-              <a class="navigation-link nav-link d-flex justify-content-between align-items-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <span class="pe-2">Features</span>
-                <span><i class="fa-solid fa-caret-down"></i></span>
+              <a class="main-link navigation-link nav-link d-flex justify-content-between align-items-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Features<i class="fa-solid fa-caret-down ps-2"></i>
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
@@ -104,9 +103,8 @@
             <!-- 2 - Solutions -->
             <li class="nav-item dropdown">
               <!-- nav-link -->
-              <a class="navigation-link nav-link d-flex justify-content-between align-items-center active" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <span class="pe-2">Solutions</span>
-                <span><i class="fa-solid fa-caret-down"></i></span>
+              <a class="main-link navigation-link nav-link d-flex justify-content-between align-items-center active" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Solutions<i class="fa-solid fa-caret-down ps-2"></i>
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
@@ -117,43 +115,13 @@
                 </li>
                 <li>
                   <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
-                    <span class="pe-3">HardWare</span> 
+                    <span class="pe-3">HardWare & Software</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
                   <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
-                    <span class="pe-3">Software</span> 
-                    <span><i class="fa-solid fa-arrow-right"></i></span>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
-                    <span class="pe-3">Accessories</span> 
-                    <span><i class="fa-solid fa-arrow-right"></i></span>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
-                    <span class="pe-3">Cloud-Based POS</span> 
-                    <span><i class="fa-solid fa-arrow-right"></i></span>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
-                    <span class="pe-3">Mobile POS</span> 
-                    <span><i class="fa-solid fa-arrow-right"></i></span>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
-                    <span>Multi Store Management</span> 
-                    <span><i class="fa-solid fa-arrow-right"></i></span>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
-                    <span class="pe-3">E-Commerce Integration</span> 
+                    <span class="pe-3">Advanced Integration</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
@@ -169,15 +137,14 @@
             <!-- 4 - Price -->
             <li class="nav-item">
               <!-- nav-link -->
-              <a class="navigation-link nav-link" href="#">Price</a>
+              <a class="navigation-link nav-link" href="#">Pricing</a>
             </li>
 
             <!-- 5 - Resourse -->
             <li class="nav-item dropdown">
               <!-- nav-link -->
-              <a class="navigation-link nav-link d-flex justify-content-between align-items-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <span class="pe-2">Resource</span>
-                <span><i class="fa-solid fa-caret-down"></i></span>
+              <a class="main-link navigation-link nav-link d-flex justify-content-between align-items-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Resource<i class="fa-solid fa-caret-down ps-2"></i>
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
@@ -220,7 +187,7 @@
             </li>
 
             <!-- Drop-Down Button -->
-            <div class="nav-btn-container d-block d-md-none text-center">
+            <div class="nav-btn-container d-block d-md-none text-center mt-3">
               <a class="nav-link nav-btn-demo" href="">Book Demo</a>
             </div>
 
@@ -688,8 +655,8 @@
         <div class="solution-container">
 
           <div class="section-title text-center pb-3">
-            <h2 class="section-heading m-0">Smart strategies for sustainable success.</h2>
-            <h5 class="section-desc"></h5>
+            <h2 class="section-heading">Smart Solutions</h2>
+            <h5 class="section-desc">Streamlined POS solutions for all businesses.</h5>
           </div>
 
 
@@ -702,10 +669,10 @@
             <!-- content -->
             <div class="col-12 col-lg-7 content-section mt-3">
 
-              <div class="content-heading m-0 text-center text-sm-start">
+              <!-- <div class="content-heading m-0 text-center text-sm-start">
                 <h2 class="mb-2 heading">Revolutionizing Retail with POS Solutions</h2>
                 <p class="mb-3 desc">Streamlined solutions designed to empower businesses of all sizes with cutting-edge POS systems, hardware, and integrations.</p>
-              </div>
+              </div> -->
 
               <!-- 1 -->
               <a href="#">
@@ -780,7 +747,7 @@
         <div class="Testimonial-container text-center">
 
           <div class="section-title text-center pb-3">
-            <h2 class="section-heading">What Our Customers Say</h2>
+            <h2 class="section-heading">Customer Feedback</h2>
             <h5 class="section-desc">Celebrating Milestones Through Your Words</h5>
           </div>
 
@@ -833,7 +800,80 @@
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
       
-    
+    <!-- Footer -->
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+    <div class="footer-wrapper">
+      <div class="container">
+        <div class="footer-container">
+
+          <div class="section-title text-center pb-3">
+            <h2 class="section-heading">Quick Links</h2>
+          </div>
+
+          <div class="row">
+
+            <!-- 1 -->
+            <div class="col-12 col-sm-6 col-lg-3">
+              <div class="link-container">
+                <ul class="links text-start">
+                  <h6 class="link-heading">Features</h6>
+                  <li class="link"><a href="#">Dine-In Management</a></li>
+                  <li class="link"><a href="#">Order Management</a></li>
+                  <li class="link"><a href="#">Menu Management</a></li>
+                  <li class="link"><a href="#">Check In</a></li>
+                  <li class="link"><a href="#">Time Management</a></li>
+                  <li class="link"><a href="#">Report Insights</a></li>
+                  <li class="link"><a href="#">KDS</a></li>
+                  <li class="link"><a href="#">Cash Management</a></li>
+                </ul>
+              </div>
+            </div>
+
+            <!-- 2 -->
+            <div class="col-12 col-sm-6 col-lg-3">
+              <div class="link-container">
+                <ul class="links text-start">
+                  <h6 class="link-heading">Solutions</h6>
+                  <li class="link"><a href="#">POS System</a></li>
+                  <li class="link"><a href="#">Hardware & Software</a></li>
+                  <li class="link"><a href="#">Advanced Integration</a></li>
+                </ul>
+              </div>
+            </div>
+
+            <!-- 3 -->
+            <div class="col-12 col-sm-6 col-lg-3">
+              <div class="link-container">
+                <ul class="links text-start">
+                  <h6 class="link-heading">Features</h6>
+                  <li class="link"><a href="#"></a></li>
+                  <li class="link"><a href="#">Industries</a></li>
+                  <li class="link"><a href="#">Pricing</a></li>
+                </ul>
+              </div>
+            </div>
+
+            <!-- 4 -->
+            <div class="col-12 col-sm-6 col-lg-3">
+              <div class="link-container">
+                <ul class="links text-start">
+                  <h6 class="link-heading">Resource</h6>
+                  <li class="link"><a href="#">Blog</a></li>
+                  <li class="link"><a href="#">YouTube</a></li>
+                  <li class="link"><a href="#">About Us</a></li>
+                  <li class="link"><a href="#">Support</a></li>
+                  <li class="link"><a href="#">Virtual Lecture</a></li>
+                  <li class="link"><a href="#">Contact</a></li>
+                </ul>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
 
   </body>
