--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
     
     <!-- Navbar -->
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
-    <nav class="navbar navbar-expand-md bg-body-tertiary fixed-top">
+    <nav class="navbar navbar-expand-md fixed-top">
       <div class="container navbar-container">
         <!-- Logo -->
         <a class="navbar-brand" href="#">
@@ -806,64 +806,97 @@
       <div class="container">
         <div class="footer-container">
 
-          <div class="section-title text-center pb-3">
-            <h2 class="section-heading">Quick Links</h2>
-          </div>
-
           <div class="row">
 
             <!-- 1 -->
-            <div class="col-12 col-sm-6 col-lg-3">
+            <div class="col-12 col-sm-6 col-lg-3 p-0">
               <div class="link-container">
-                <ul class="links text-start">
+                <ul class="links">
                   <h6 class="link-heading">Features</h6>
-                  <li class="link"><a href="#">Dine-In Management</a></li>
-                  <li class="link"><a href="#">Order Management</a></li>
-                  <li class="link"><a href="#">Menu Management</a></li>
-                  <li class="link"><a href="#">Check In</a></li>
-                  <li class="link"><a href="#">Time Management</a></li>
-                  <li class="link"><a href="#">Report Insights</a></li>
-                  <li class="link"><a href="#">KDS</a></li>
-                  <li class="link"><a href="#">Cash Management</a></li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Dine-In Management</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Order Management</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Menu Management</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Check In</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Time Management</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Report Insights</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>KDS</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Cash Management</a>
+                  </li>
                 </ul>
               </div>
             </div>
 
             <!-- 2 -->
-            <div class="col-12 col-sm-6 col-lg-3">
+            <div class="col-12 col-sm-6 col-lg-3 p-0">
               <div class="link-container">
                 <ul class="links text-start">
                   <h6 class="link-heading">Solutions</h6>
-                  <li class="link"><a href="#">POS System</a></li>
-                  <li class="link"><a href="#">Hardware & Software</a></li>
-                  <li class="link"><a href="#">Advanced Integration</a></li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>POS System</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Hardware & Software</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Advanced Integration</a>
+                  </li>
                 </ul>
               </div>
             </div>
 
             <!-- 3 -->
-            <div class="col-12 col-sm-6 col-lg-3">
+            <div class="col-12 col-sm-6 col-lg-3 p-0">
               <div class="link-container">
                 <ul class="links text-start">
-                  <h6 class="link-heading">Features</h6>
-                  <li class="link"><a href="#"></a></li>
-                  <li class="link"><a href="#">Industries</a></li>
-                  <li class="link"><a href="#">Pricing</a></li>
+                  <h6 class="link-heading">Explore</h6>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Industries</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Pricing</a>
+                  </li>
                 </ul>
               </div>
             </div>
 
             <!-- 4 -->
-            <div class="col-12 col-sm-6 col-lg-3">
+            <div class="col-12 col-sm-6 col-lg-3 p-0">
               <div class="link-container">
                 <ul class="links text-start">
                   <h6 class="link-heading">Resource</h6>
-                  <li class="link"><a href="#">Blog</a></li>
-                  <li class="link"><a href="#">YouTube</a></li>
-                  <li class="link"><a href="#">About Us</a></li>
-                  <li class="link"><a href="#">Support</a></li>
-                  <li class="link"><a href="#">Virtual Lecture</a></li>
-                  <li class="link"><a href="#">Contact</a></li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Blog</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>YouTube</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>About Us</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Support</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Virtual Lecture</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Contact</a>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -872,6 +905,71 @@
 
         </div>
       </div>
+    </div>
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+
+
+    <div class="container-fluid p-0" style="background-color: black;">
+      <div style="border: 2px solid #E52333;"></div>
+    </div>
+
+
+    <!-- Powered -->
+    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+    <div class="Powered-wrapper">
+      <div class="container">
+        <div class="Powered-container">
+
+         
+          <div class="row contact-info">
+            <div class="col-12 col-sm-6 col-lg-3 info">
+              <i class="fa-solid fa-mobile"></i>
+              <p>Phone No</p>
+              <a href="#">1-2392-23928-2</a>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 info">
+              <i class="fa-solid fa-envelope"></i>
+              <p>E-mail</p>
+              <a href="#">mail@company.com</a>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 info">
+              <i class="fa-solid fa-location-dot"></i>
+              <p>Address</p>
+              <a href="#">2939 Patrick Street, Vicotria TX, United States</a>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 info">
+              <i class="fa-solid fa-shop"></i>
+              <p>Opening Hours</p>
+              <a href="#">Monday - Friday (9:00 AM to 5:00 PM)</a>
+            </div>
+          </div>
+
+          <div class="logo-container text-center">
+            <a href=""><img src="Images/Maghil_New_Logo_with_Tagline-removebg-preview.png" alt=""></a>
+          </div>
+
+          <div class="social-media-icon d-flex align-items-center justify-content-center mt-4">
+            <a href="" class="pe-3"><i class="fa-brands fa-instagram"></i></a>
+            <a href="" class="pe-3"><i class="fa-brands fa-facebook"></i></a>
+            <a href="" class="pe-3"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="" class="pe-3"><i class="fa-brands fa-youtube"></i></a>
+            <a href="" class="pe-0"><i class="fa-brands fa-linkedin"></i></a>
+          </div>
+
+        </div>
+      </div>
+
+      <div style="border: 1.5px solid #E52333; margin-top: 20px;"></div>
+
+      <div class="copy-right">
+        <span class="copy">© 2025 Maghil, All Rights Reserved.</span>
+        <div class="policy">
+          <span class="p1"><a href="">Privacy Policy</a></span>
+          <span class="p1"><a href="">Terms & Conditions</a></span>
+          <span class="p1"><a href="">Site Map</a></span>
+        </div>
+      </div>
+
     </div>
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
