wrap : home-page

--- a/home.html
+++ b/home.html
@@ -547,7 +547,7 @@
         <div class="industry-container">
 
           <div class="section-title text-center pb-4">
-            <h2 class="section-heading">Key Verticals</h2>
+            <h2 class="section-heading">Industries</h2>
             <h5 class="section-desc">Customized solutions for every industry.</h5>
           </div>
 
@@ -572,12 +572,12 @@
             <div class="col-12 col-sm-6 col-lg-3">
               <div class="card">
                 <picture>
-                  <img src="Images/Industries/Hospitality-1.jpg" alt="" class="img-fluid">
+                  <img src="Images/Industries/cafe.jpg" alt="" class="img-fluid">
                 </picture>
                 <div class="card-body text-center">
                   <div class="industry-content">
-                    <div class="industry-name">Hospitality</div>
-                    <!-- <div class="industry-desc">Transform guest experiences with innovative tools designed for hotels, resorts, and event management, ensuring impeccable service delivery.</div> -->
+                    <div class="industry-name">Cafe</div>
+                    <!-- <div class="industry-desc">Drive innovation and productivity in manufacturing and industrial processes with tailored technology solutions for the modern era.</div> -->
                   </div>
                 </div>
               </div>
@@ -602,12 +602,12 @@
             <div class="col-12 col-sm-6 col-lg-3">
               <div class="card">
                 <picture>
-                  <img src="Images/Industries/Industry.jpg" alt="" class="img-fluid">
+                  <img src="Images/Industries/Resto-Bar.jpg" alt="" class="img-fluid">
                 </picture>
                 <div class="card-body text-center">
                   <div class="industry-content">
-                    <div class="industry-name">Industry</div>
-                    <!-- <div class="industry-desc">Drive innovation and productivity in manufacturing and industrial processes with tailored technology solutions for the modern era.</div> -->
+                    <div class="industry-name">Restro Bar</div>
+                    <!-- <div class="industry-desc">Transform guest experiences with innovative tools designed for hotels, resorts, and event management, ensuring impeccable service delivery.</div> -->
                   </div>
                 </div>
               </div>
