--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -54,6 +55,7 @@
     <!-- Js File -->
     <script src="home.js" defer></script>
   </head>
+
   <body>
     
     <!-- Navbar -->
@@ -561,8 +563,10 @@
                 </picture>
                 <div class="card-body text-center">
                   <div class="industry-content">
-                    <div class="industry-name">Restaurant</div>
-                    <!-- <div class="industry-desc">Revolutionize restaurant management with smart solutions for streamlined operations, superior dining experiences, and efficient customer service.</div> -->
+                    <a href="#">
+                      <span class="industry-name">Restaurant</span>
+                      <i class="fa-solid fa-arrow-right-long ms-2"></i>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -576,8 +580,10 @@
                 </picture>
                 <div class="card-body text-center">
                   <div class="industry-content">
-                    <div class="industry-name">Cafe</div>
-                    <!-- <div class="industry-desc">Drive innovation and productivity in manufacturing and industrial processes with tailored technology solutions for the modern era.</div> -->
+                    <a href="#">
+                      <span class="industry-name">Cafe</span>
+                      <i class="fa-solid fa-arrow-right-long ms-2"></i>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -591,8 +597,10 @@
                 </picture>
                 <div class="card-body text-center">
                   <div class="industry-content">
-                    <div class="industry-name">Retail</div>
-                    <!-- <div class="industry-desc">Empower grocery stores, food marts, and pharmacies with cutting-edge technology solutions for seamless operations and enhanced customer satisfaction.</div> -->
+                    <a href="#">
+                      <span class="industry-name">Retail</span>
+                      <i class="fa-solid fa-arrow-right-long ms-2"></i>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -606,8 +614,10 @@
                 </picture>
                 <div class="card-body text-center">
                   <div class="industry-content">
-                    <div class="industry-name">Restro Bar</div>
-                    <!-- <div class="industry-desc">Transform guest experiences with innovative tools designed for hotels, resorts, and event management, ensuring impeccable service delivery.</div> -->
+                    <a href="#">
+                      <span class="industry-name">Restro Bar</span>
+                      <i class="fa-solid fa-arrow-right-long ms-2"></i>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -968,11 +978,6 @@
     </div>
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
-
   </body>
 </html>
-
-
-
-
 
