--- a/Industry_category_2.html
+++ b/Industry_category_2.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maghil | Pricing</title>
+    <title>Maghil | Category-2</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -50,10 +50,10 @@
     />
 
     <!-- Custom CSS File -->
-    <link rel="stylesheet" href="Pricing.css" />
+    <link rel="stylesheet" href="Industry_category_2.css" />
 
     <!-- Js File -->
-    <script src="Prcing.js" defer></script>
+    <script src="Industry_category_2.js" defer></script>
   </head>
 
   <body>  
@@ -230,7 +230,7 @@
           <div class="overlay-1"></div>
           <div class="overlay-2"></div>
 
-          <h4 class="banner-text">Pricing</h4>
+          <h4 class="banner-text">Category-2</h4>
           <h3 class="banner-tagLine">Choose your convenient pricing plan!</h3>
           <h6 class="banner-desc">It doesn’t matter which stage of the tech journey you are in, we can help you get started with us.</h6>
 
@@ -240,96 +240,7 @@
     <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
 
 
-    <!-- Pricing -->
-    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
-    <div class="pricing-wrapper">
-      <div class="container">
-        <div class="pricing-container pt-5 pb-4">
-
-          <h3 class="pricing-plans text-center">Flexible Plans for Every Stage !</h3>
-          
-          <div class="row pt-3">
-            <!-- 1 -->
-            <div class="col-12 col-lg-4 price-style">
-              <div class="item">
-                <div class="pricing-header text-center">Silver</div>
-                <div class="pricing-content">
-                  <div class="price">
-                    <h2>$99<sub class="month">/ Monthly</sub></h2>
-                  </div>
-                  <hr class="mb-3">
-                  <div class="price-service">
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>Interactive Booking</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>Interactive Menu</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>Interactive Off-Prem Ordering</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>3rd Party Order Integration</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>KDS</p>
-                  </div>
-                  <div class="Purchase-btn text-center">
-                    <a href="">Purchase Plan</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <!-- 2 -->
-            <div class="col-12 col-lg-4 price-style">
-              <div class="item">
-                <div class="pricing-header text-center">Gold</div>
-                <div class="pricing-content">
-                  <div class="price">
-                    <h2>$199<sub class="month">/ Monthly</sub></h2>
-                  </div>
-                  <hr class="mb-3">
-                  <div class="price-service">
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>Interactive Booking</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>Interactive Menu</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>Interactive On-Prem Ordering</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>Interactive Off-Prem Ordering</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>3rd Party Order Integration</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>KDS</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>Loyalty</p>
-                  </div>
-                  <div class="Purchase-btn text-center">
-                    <a href="">Purchase Plan</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <!-- 3 -->
-            <div class="col-12 col-lg-4 price-style">
-              <div class="item platinum">
-                <div class="pricing-header text-center">Platinum</div>
-                <div class="pricing-content">
-                  <div class="price">
-                    <h2>$299<sub class="month">/ Monthly</sub></h2>
-                  </div>
-                  <hr class="mb-3">
-                  <div class="price-service">
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>Interactive Booking</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>Interactive Menu</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>Interactive On-Prem Ordering</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>Interactive Off-Prem Ordering</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>3rd Party Order Integration</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>KDS</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>Loyalty</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>Review/Feedback & Insights</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>Marketing (Channels)</p>
-                    <p class="price-individual-service"><i class="fa-solid fa-check me-2"></i>Marketing(Content Generation)</p>
-                  </div>
-                  <div class="Purchase-btn text-center">
-                    <a href="">Purchase Plan</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-    <!-- @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ -->
+    
 
 
     <!-- Footer -->
