--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
     <nav class="navbar navbar-expand-md fixed-top">
       <div class="container navbar-container">
         <!-- Logo -->
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="home.html">
           <img src="Images/Maghil_New_Logo_with_Tagline-removebg-preview.png" alt="logo" class="logo-image">
         </a>
 
@@ -82,20 +82,20 @@
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
-                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
-                    <span class="pe-3">Action</span>
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Merchant_App.html">
+                    <span class="pe-3">Merchant-App</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
-                    <span class="pe-3">Another action</span>
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Merchant_Portal.html">
+                    <span class="pe-3">Merchant-Portal</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
-                    <span class="pe-3">Something else here</span>
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Customer_App.html">
+                    <span class="pe-3">Customer-App</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
@@ -110,19 +110,19 @@
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
-                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="POS.html">
                     <span class="pe-3">POS System</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Hardware_Software.html">
                     <span class="pe-3">HardWare & Software</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Adv_integration.html">
                     <span class="pe-3">Advanced Integration</span> 
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
@@ -133,13 +133,41 @@
             <!-- 3 - Industries -->
             <li class="nav-item dropdown">
               <!-- nav-link -->
-              <a class="navigation-link nav-link" href="#">Industries</a>
+              <a class="main-link navigation-link nav-link d-flex justify-content-between align-items-center active" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Industries<i class="fa-solid fa-caret-down ps-2"></i>
+              </a>
+              <ul class="dropdown-menu p-0">
+                <li>
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Industry_category_1.html">
+                    <span class="pe-3">Category-1</span> 
+                    <span><i class="fa-solid fa-arrow-right"></i></span>
+                  </a>
+                </li>
+                <li>
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Industry_category_2.html">
+                    <span class="pe-3">Category-2</span> 
+                    <span><i class="fa-solid fa-arrow-right"></i></span>
+                  </a>
+                </li>
+                <li>
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Industry_category_3.html">
+                    <span class="pe-3">Category-3</span> 
+                    <span><i class="fa-solid fa-arrow-right"></i></span>
+                  </a>
+                </li>
+                <li>
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="Industry_category_4.html">
+                    <span class="pe-3">Category-4</span> 
+                    <span><i class="fa-solid fa-arrow-right"></i></span>
+                  </a>
+                </li>
+              </ul>
             </li>
 
             <!-- 4 - Price -->
             <li class="nav-item">
               <!-- nav-link -->
-              <a class="navigation-link nav-link" href="#">Pricing</a>
+              <a class="navigation-link nav-link" href="Pricing.html">Pricing</a>
             </li>
 
             <!-- 5 - Resourse -->
@@ -150,38 +178,26 @@
               </a>
               <ul class="dropdown-menu p-0">
                 <li>
-                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
-                    <span class="pe-3"><i class="fa-solid fa-blog pe-2"></i>Blog</span>
-                    <span><i class="fa-solid fa-arrow-right"></i></span>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
-                    <span class="pe-3"><i class="fa-brands fa-square-youtube pe-2"></i>YouTube</span>
-                    <span><i class="fa-solid fa-arrow-right"></i></span>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="about.html">
                     <span class="pe-3"><i class="fa-solid fa-circle-info pe-2"></i>About Us</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
-                    <span class="pe-3"><i class="fa-solid fa-headset pe-2"></i>Support</span>
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="https://maghil.blog/" target="_blank">
+                    <span class="pe-3"><i class="fa-solid fa-blog pe-2"></i>Blog</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="https://www.youtube.com/@magilhub4286" target="_blank">
+                    <span class="pe-3"><i class="fa-brands fa-square-youtube pe-2"></i>YouTube</span>
+                    <span><i class="fa-solid fa-arrow-right"></i></span>
+                  </a>
+                </li>
+                <li>
+                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="virtual_lecture.html">
                     <span class="pe-3"><i class="fa-brands fa-weibo pe-2"></i>Virtual Lecture</span>
-                    <span><i class="fa-solid fa-arrow-right"></i></span>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item d-flex justify-content-between align-items-center" href="#">
-                    <span class="pe-3"><i class="fa-solid fa-phone pe-2"></i>Contact</span>
                     <span><i class="fa-solid fa-arrow-right"></i></span>
                   </a>
                 </li>
@@ -190,7 +206,7 @@
 
             <!-- Drop-Down Button -->
             <div class="nav-btn-container d-block d-md-none text-center mt-3">
-              <a class="nav-link nav-btn-demo" href="">Book Demo</a>
+              <a class="nav-link nav-btn-demo" href="Book_demo.html">Book Demo</a>
             </div>
 
           </ul>
@@ -198,7 +214,7 @@
 
         <!-- Shedule a Demo -->
         <div class="btn-container">
-          <a class="nav-link btn-demo" href="">Book Demo</a>
+          <a class="nav-link btn-demo" href="Book_demo.html">Book Demo</a>
         </div>
       </div>
     </nav>
@@ -224,7 +240,7 @@
               <h1 class="hero-title">Effortless POS Solutions for Your Restaurant!</h1>
               <h6 class="hero-paragraph">Streamline all aspects of your restaurant's operations, allowing you to focus on expanding your brand and leading with confidence!</h6>
               <div class="btn-container">
-                <a class="nav-link primary-btn" href="">Start a Free Trail</a>
+                <a class="nav-link primary-btn" href="Book_demo.html">Start a Free Trail</a>
               </div>
             </div>
             <div class="col-12  col-lg-7 text-center my-5 mt-lg-3 p-2 image-section">
@@ -660,7 +676,7 @@
               </div> -->
 
               <!-- 1 -->
-              <a href="#">
+              <a href="POS.html">
                 <div class="solution-card d-flex align-items-start mb-2 mb-lg-1">
                   <h2 class="solution-icon mt-1 me-5">01</h2>
                   <div class="solution-content ms-1">
@@ -677,7 +693,7 @@
               </a>
 
               <!-- 2 -->
-              <a href="#">
+              <a href="Hardware_Software.html">
                 <div class="solution-card d-flex align-items-start mb-2 mb-lg-1">
                   <h2 class="solution-icon mt-1 me-5">02</h2>
                   <div class="solution-content">
@@ -695,7 +711,7 @@
               </a>
 
               <!-- 3 -->
-              <a href="#">
+              <a href="Adv_integration.html">
                 <div class="solution-card d-flex align-items-start mb-2 mb-lg-1">
                   <h2 class="solution-icon mt-1 me-5">03</h2>
                   <div class="solution-content">
@@ -832,13 +848,13 @@
                 <ul class="links text-start">
                   <h6 class="link-heading">Solutions</h6>
                   <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>POS System</a>
+                    <a href="POS.html"><i class="fa-regular fa-circle-right pe-2"></i>POS System</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Hardware & Software</a>
+                    <a href="Hardware_Software.html"><i class="fa-regular fa-circle-right pe-2"></i>Hardware & Software</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Advanced Integration</a>
+                    <a href="Adv_integration.html"><i class="fa-regular fa-circle-right pe-2"></i>Advanced Integration</a>
                   </li>
                 </ul>
               </div>
@@ -850,10 +866,19 @@
                 <ul class="links text-start">
                   <h6 class="link-heading">Explore</h6>
                   <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Industries</a>
+                    <a href="Pricing.html"><i class="fa-regular fa-circle-right pe-2"></i>Pricing</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Pricing</a>
+                    <a href="Industry_category_1.html"><i class="fa-regular fa-circle-right pe-2"></i>Category-1</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="Industry_category_2.html"><i class="fa-regular fa-circle-right pe-2"></i>Category-2</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="Industry_category_3.html"><i class="fa-regular fa-circle-right pe-2"></i>Category-3</a>
+                  </li>
+                  <li class="link d-flex align-items-center">
+                    <a href="Industry_category_4.html"><i class="fa-regular fa-circle-right pe-2"></i>Category-4</a>
                   </li>
                 </ul>
               </div>
@@ -865,22 +890,16 @@
                 <ul class="links text-start">
                   <h6 class="link-heading">Resource</h6>
                   <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Blog</a>
+                    <a href="about.html"><i class="fa-regular fa-circle-right pe-2"></i>About Us</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>YouTube</a>
+                    <a href="https://maghil.blog/" target="_blank"><i class="fa-regular fa-circle-right pe-2"></i>Blog</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>About Us</a>
+                    <a href="https://www.youtube.com/@magilhub4286"><i class="fa-regular fa-circle-right pe-2"></i>YouTube</a>
                   </li>
                   <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Support</a>
-                  </li>
-                  <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Virtual Lecture</a>
-                  </li>
-                  <li class="link d-flex align-items-center">
-                    <a href="#"><i class="fa-regular fa-circle-right pe-2"></i>Contact</a>
+                    <a href="virtual_lecture.html"><i class="fa-regular fa-circle-right pe-2"></i>Virtual Lecture</a>
                   </li>
                 </ul>
               </div>
@@ -907,7 +926,7 @@
 
           <h1>Schedule a Meeting with Us!</h1>
           <p>Let’s discuss your idea and build something amazing together.</p>
-          <a href="#">Book Demo</a>
+          <a href="Book_demo.html">Book Demo</a>
 
         </div>
       </div>
@@ -925,17 +944,17 @@
             <div class="col-12 col-sm-6 col-lg-3 info">
               <i class="fa-solid fa-mobile"></i>
               <p>Phone No</p>
-              <a href="#">1-2392-23928-2</a>
+              <a href="#">+1 267 609 6099</a>
             </div>
             <div class="col-12 col-sm-6 col-lg-3 info">
               <i class="fa-solid fa-envelope"></i>
               <p>E-mail</p>
-              <a href="#">mail@company.com</a>
+              <a href="#">info@magilhub.com</a>
             </div>
             <div class="col-12 col-sm-6 col-lg-3 info">
               <i class="fa-solid fa-location-dot"></i>
               <p>Address</p>
-              <a href="#">2939 Patrick Street, Vicotria TX, United States</a>
+              <a href="#">Princeton, New Jersey, 08540, United States</a>
             </div>
             <div class="col-12 col-sm-6 col-lg-3 info">
               <i class="fa-solid fa-envelope"></i>
@@ -950,15 +969,15 @@
           </div>
 
           <div class="logo-container text-center">
-            <a href=""><img src="Images/Maghil_New_Logo_with_Tagline-removebg-preview.png" alt=""></a>
+            <a href="home.html"><img src="Images/Maghil_New_Logo_with_Tagline-removebg-preview.png" alt=""></a>
           </div>
 
           <div class="social-media-icon d-flex align-items-center justify-content-center mt-4">
-            <a href="" class="pe-3"><i class="fa-brands fa-instagram"></i></a>
-            <a href="" class="pe-3"><i class="fa-brands fa-facebook"></i></a>
-            <a href="" class="pe-3"><i class="fa-brands fa-x-twitter"></i></a>
-            <a href="" class="pe-3"><i class="fa-brands fa-youtube"></i></a>
-            <a href="" class="pe-0"><i class="fa-brands fa-linkedin"></i></a>
+            <a target="_blank" href="https://www.instagram.com/maghilhq/profilecard/?igsh=MWE4MHU4eXI2cmdhag==" class="pe-3"><i class="fa-brands fa-instagram"></i></a>
+            <a target="_blank" href="https://www.facebook.com/share/15NWbraL4B/" class="pe-3"><i class="fa-brands fa-facebook"></i></a>
+            <a target="_blank" href="https://twitter.com/maghilHQ" class="pe-3"><i class="fa-brands fa-x-twitter"></i></a>
+            <a target="_blank" href="https://www.youtube.com/@magilhub4286" class="pe-3"><i class="fa-brands fa-youtube"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/company/maghil/" class="pe-0"><i class="fa-brands fa-linkedin"></i></a>
           </div>
 
         </div>
