--- a/about.html
+++ b/about.html
@@ -262,10 +262,10 @@
         <div class="about-section-container">
 
           <!-- 1 -->
-          <div class="row align-items-center">
+          <div class="row align-items-center mb-5">
             <div class="col-12 col-lg-5 section-1">
               <div class="img-section">
-                <img src="Images/About-Page/0004.jpeg" alt="" class="img-fluid">
+                <img src="Images/About-Page/section-1.png" alt="" class="img-fluid">
               </div>
             </div>
             <div class="col-12 col-lg-7 section-1 parent-overlay px-3">
@@ -286,7 +286,7 @@
           </div>
 
           <!-- 2 -->
-          <div class="row align-items-center">
+          <div class="row align-items-center mb-5">
             <div class="col-12 col-lg-7 section-1 parent-overlay order-2 order-lg-1 px-3">
               <div class="child-overlay"></div>          
               <div class="content-section">
@@ -304,16 +304,16 @@
             </div>
             <div class="col-12 col-lg-5 section-1 order-1 order-lg-2">
               <div class="img-section">
-                <img src="Images/About-Page/0004.jpeg" alt="" class="img-fluid">
+                <img src="Images/About-Page/section-2.png" alt="" class="img-fluid">
               </div>
             </div>
           </div>
 
           <!-- 3 -->
-          <div class="row align-items-center">
+          <div class="row align-items-center mb-5">
             <div class="col-12 col-lg-5 section-1">
               <div class="img-section">
-                <img src="Images/About-Page/0004.jpeg" alt="" class="img-fluid">
+                <img src="Images/About-Page/section-3.png" alt="" class="img-fluid">
               </div>
             </div>
             <div class="col-12 col-lg-7 section-1 parent-overlay px-3">
