--- a/about.html
+++ b/about.html
@@ -263,7 +263,7 @@
 
           <!-- 1 -->
           <div class="row align-items-center mb-5">
-            <div class="col-12 col-lg-5 section-1">
+            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
               <div class="img-section">
                 <img src="Images/About-Page/section-1.png" alt="" class="img-fluid">
               </div>
@@ -302,7 +302,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2">
+            <div class="col-12 col-lg-5 section-1 order-1 order-lg-2 mb-4 mb-lg-0">
               <div class="img-section">
                 <img src="Images/About-Page/section-2.png" alt="" class="img-fluid">
               </div>
@@ -310,8 +310,8 @@
           </div>
 
           <!-- 3 -->
-          <div class="row align-items-center mb-5">
-            <div class="col-12 col-lg-5 section-1">
+          <div class="row align-items-center mb-3">
+            <div class="col-12 col-lg-5 section-1 mb-4 mb-lg-0">
               <div class="img-section">
                 <img src="Images/About-Page/section-3.png" alt="" class="img-fluid">
               </div>
