--- a/home.html
+++ b/home.html
@@ -231,9 +231,9 @@
             <div class="col-12  col-lg-5 text-center text-sm-start mt-2 py-3 py-md-0 content-section">
               <!-- Type-Section -->
               <div class="typing-section">
-                <span class="emoji">✌🏻</span>
+                <!-- <span class="emoji">✌🏻</span> -->
                 <span class="typing-text">
-                  <span class="static-text">Mode</span>
+                  <span class="static-text p-2">Mode</span>
                   <span class="cursor">|</span>
                 </span>
               </div>
